@@ -1,3 +1,8 @@
+2020-05-21 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/bug-3003.c:
+	  Regression test for bug #3003 (disabled until bug is fixed).
+
 2020-05-19 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/include/iso646.h,
